--- a/css/main.css
+++ b/css/main.css
@@ -51,3 +51,11 @@ body {
 .slider:nth-child(odd) .slider__img {
   transform: rotate(-180deg);
 }
+
+@media(max-width:768px){
+  .slider__img{
+    height: 50%;
+    width: 50%;
+  }
+
+}
